syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ArtemVoronov/indefinite-studies-utils/pkg/services/feed/feed";

package posts;

service FeedBuilderService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostReply) {}
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostReply) {}
  rpc DeletePost (DeletePostRequest) returns (DeletePostReply) {}
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply) {}
  rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply) {}
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {}
}

message CreatePostRequest {
  string uuid = 1;
  int32 authorId = 2;
  string text = 3;
  string previewText = 4;
  string topic = 5;
  string state = 6;
  google.protobuf.Timestamp createDate = 7;
  google.protobuf.Timestamp lastUpdateDate = 8;
}

message CreatePostReply {
}

message UpdatePostRequest {
  string uuid = 1;
  int32 authorId = 2;
  string text = 3;
  string previewText = 4;
  string topic = 5;
  string state = 6;
  google.protobuf.Timestamp createDate = 7;
  google.protobuf.Timestamp lastUpdateDate = 8;
}

message UpdatePostReply {
}

message DeletePostRequest {
  string uuid = 1;
}

message DeletePostReply {
}

message CreateCommentRequest {
  string uuid = 1;
  int32 authorId = 2;
  string postUuid = 3;
  int32 linkedCommentId = 4;
  string text = 5;
  string state = 6;
  google.protobuf.Timestamp createDate = 7;
  google.protobuf.Timestamp lastUpdateDate = 8;
}

message CreateCommentReply {
}

message UpdateCommentRequest {
  string uuid = 1;
  int32 authorId = 2;
  string postUuid = 3;
  int32 linkedCommentId = 4;
  string text = 5;
  string state = 6;
  google.protobuf.Timestamp createDate = 7;
  google.protobuf.Timestamp lastUpdateDate = 8;
}

message UpdateCommentReply {
}

message DeleteCommentRequest {
  string uuid = 1;
  string postUuid = 2;
}

message DeleteCommentReply {
}

message UpdateUserRequest {
  int32 id = 1;
  string login = 2;
  string email = 3;
  string role = 4;
  string state = 5;
}

message UpdateUserReply {
}